# FyoProject

./: .gitmodules  .project  CMakeLists.txt  NewtonsRings.cpp  README.md
doc/: Prezentace.tex
shader/: frag.glsl
